--- a/libraries/STM32_CAN/library.properties
+++ b/libraries/STM32_CAN/library.properties
@@ -1,9 +1,10 @@
 name=STM32_CAN
-version=1.2.1
+version=1.2.2
 author=Pasi Kemppainen
 maintainer=Pasi Kemppainen
 sentence=CAN bus Library for Arduino STM32
 paragraph=With this library you can use the CAN peripheral in STM32 processors.
 category=Communication
 url=https://github.com/pazi88/STM32_CAN
+repository=https://github.com/pazi88/STM32_CAN.git
 architectures=stm32
